--- a/imports/client/styles/_main.scss
+++ b/imports/client/styles/_main.scss
@@ -3,7 +3,7 @@
 //@import './components/boxed-view';
 @import './components/button';
 @import './components/header';
-//@import './components/page-content';
+@import './components/page-content';
 //@import './components/checkbox';
 //@import './components/item';
 
@@ -47,5 +47,40 @@ form {
   }
   input[type="submit"] {
     width:5em;
+  }
+}
+
+.header {
+  nav, ul, li {
+    padding:0;
+    margin:0;
+    line-height:2.5;
+    display: inline-block;
+    &:not(first-child) {
+      margin-left:1em;
+    }
+  }
+  nav ul li {
+    list-style-type:none;
+    a {color:white;}
+  }
+}
+
+.page-home {
+  font-size:4vh;
+  ul {
+    list-style-type: none;
+    li {
+      padding:0.5em;
+    }
+  }
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+  .qr-code {
+    border:1px solid black;
+    text-align: center;
+    padding: 0.5em;
   }
 }
