--- a/imports/client/styles/components/_page-player.scss
+++ b/imports/client/styles/components/_page-player.scss
@@ -2,4 +2,20 @@
   background-color: black;
   color:white;
   height:100vh;
+
+  .screen {
+    position: absolute;
+    top:0;
+    left:0;
+    width:100%;
+    font-size:10vw;
+    text-align:center;
+    top:50%;
+    transform: translateY(-50%);
+    background-color: #111;
+  }
+
+  .controls {
+    opacity: 0.3;
+  }
 }
