try to fix duplicate IDs when creating new entries. automatically determine display style at output, disable the style field in the collection and inputs.

--- a/imports/client/styles/components/_page-player.scss
+++ b/imports/client/styles/components/_page-player.scss
@@ -13,6 +13,9 @@
     top:50%;
     transform: translateY(-50%);
     background-color: #111;
+    &.style-audience {
+      color:lightgreen;
+    }
   }
 
   .controls {
