--- a/imports/client/styles/_main.scss
+++ b/imports/client/styles/_main.scss
@@ -52,6 +52,7 @@ form {
   input[type="submit"] {
     padding:1ex;
     margin-bottom: 1ex;
+    background-color: rgb(244,244,244);
     &:hover {
       background-color: rgba(0,0,0,0.2);
     }
