--- a/imports/client/styles/components/_page-player.scss
+++ b/imports/client/styles/components/_page-player.scss
@@ -8,13 +8,13 @@
     top:0;
     left:0;
     width:100%;
-    font-size:10vw;
+    font-size:7vw;
     text-align:center;
     top:50%;
     transform: translateY(-50%);
     background-color: #111;
     &.style-audience {
-      color:lightgreen;
+      color:green;
     }
   }
 
