--- a/imports/client/styles/_main.scss
+++ b/imports/client/styles/_main.scss
@@ -1,8 +1,9 @@
 @import './variables';
 @import './base';
-//@import './components/boxed-view';
+@import './components/boxed-view';
 @import './components/button';
 @import './components/header';
+@import './components/form';
 @import './components/page-content';
 @import './components/page-player';
 //@import './components/checkbox';
@@ -30,44 +31,6 @@ table {
   }
   th.narrow {
     width:2em;
-  }
-}
-
-form {
-  * { font-size:16px; }
-  > * {
-    line-height:2em;
-  }
-  > div > div {
-    padding-left:0ex;
-    &:first-child {
-      padding-top:1ex;
-    }
-  }
-  label {
-    clear:left;
-    width:30ex;
-    float:left;
-  }
-  input[type="submit"] {
-    padding:1ex;
-    margin-bottom: 1ex;
-    background-color: rgb(244,244,244);
-    &:hover {
-      background-color: rgba(0,0,0,0.2);
-    }
-    &.submit-button-success {
-      background-color: green;
-      &::after {
-        content:"saved";
-      }
-    }
-    &.submit-button-error {
-      background-color: red;
-      &::after {
-        content:"error";
-      }
-    }    
   }
 }
 
