improve admin styles. improve player stability.

--- a/imports/client/styles/_base.scss
+++ b/imports/client/styles/_base.scss
@@ -29,3 +29,14 @@ p {
 a {
   color: black;
 }
+
+.buttonlink {
+  text-decoration: none;
+  padding:1ex;
+  border:1px lightgrey solid;
+  background-color: #eee;
+  display: inline-block;
+  &:hover {
+    background-color: lightgrey;
+  }
+}
