--- a/imports/client/styles/components/_AdminEntries.scss
+++ b/imports/client/styles/components/_AdminEntries.scss
@@ -4,4 +4,11 @@
       width:50%;
     }
   }
+  .audience {
+    color: rgb(24, 119, 24);
+    font-weight: bold;
+  }
+  .normal {
+    font-weight: bold;
+  }
 }
